# C_float16

./: .gitignore  CMakeLists.txt  README.md  cmake_build.cmd  cmake_build.sh  float16.sln  makefile
float16/: float16.c  float16.h  float16.vcxproj  float16.vcxproj.filters  main.cpp
